benchmarks/verus/bignum/vericoder_glm_15-09_18h46/debug/bignum_ModExp_DivMod_Zeroes_iter7_error.log
=== Verification Error - Iteration 7 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_DivMod_Zeroes.rs
Time: 2025-09-15 20:29:43

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Zeroes_impl.rs:30:9
   |
25 | exec fn str_to_int_exec(s: &[char]) -> (result: nat)
   |                                                 --- expected `vstd::prelude::nat` because of return type
...
30 |         0
   |         ^ expected `nat`, found integer

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Zeroes_impl.rs:36:22
   |
36 |         rest_value * 2 + last_bit
   |         ----------   ^ expected `nat`, found integer
   |         |
   |         expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Zeroes_impl.rs:36:26
   |
36 |         rest_value * 2 + last_bit
   |         --------------   ^^^^^^^^ expected `nat`, found integer
   |         |
   |         expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Zeroes_impl.rs:45:13
   |
45 |     if n == 0 {
   |        -    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Zeroes_impl.rs:47:20
   |
47 |     } else if n == 1 {
   |               -    ^ expected `nat`, found integer
   |               |
   |               expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Zeroes_impl.rs:50:43
   |
50 |         let mut res = int_to_str_exec(n / 2);
   |                                       -   ^ expected `nat`, found integer
   |                                       |
   |                                       expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Zeroes_impl.rs:51:33
   |
51 |         let last_digit = if n % 2 == 0 { '0' } else { '1' };
   |                             -   ^ expected `nat`, found integer
   |                             |
   |                             expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Zeroes_impl.rs:51:38
   |
51 |         let last_digit = if n % 2 == 0 { '0' } else { '1' };
   |                             -----    ^ expected `nat`, found integer
   |                             |
   |                             expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Zeroes_impl.rs:64:9
   |
58 | exec fn mod_exp_recursive(exponent: &[char], base: nat, modulus: nat) -> (result: nat)
   |                                                                                   --- expected `vstd::prelude::nat` because of return type
...
64 |         1
   |         ^ expected `nat`, found integer

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0308`.

--------------------------------------------------------------------------------

Additional Output:
error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Zeroes_impl.rs:30:9
   |
25 | exec fn str_to_int_exec(s: &[char]) -> (result: nat)
   |                                                 --- expected `vstd::prelude::nat` because of return type
...
30 |         0
   |         ^ expected `nat`, found integer

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Zeroes_impl.rs:36:22
   |
36 |         rest_value * 2 + last_bit
   |         ----------   ^ expected `nat`, found integer
   |         |
   |         expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Zeroes_impl.rs:36:26
   |
36 |         rest_value * 2 + last_bit
   |         --------------   ^^^^^^^^ expected `nat`, found integer
   |         |
   |         expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Zeroes_impl.rs:45:13
   |
45 |     if n == 0 {
   |        -    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Zeroes_impl.rs:47:20
   |
47 |     } else if n == 1 {
   |               -    ^ expected `nat`, found integer
   |               |
   |               expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Zeroes_impl.rs:50:43
   |
50 |         let mut res = int_to_str_exec(n / 2);
   |                                       -   ^ expected `nat`, found integer
   |                                       |
   |                                       expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Zeroes_impl.rs:51:33
   |
51 |         let last_digit = if n % 2 == 0 { '0' } else { '1' };
   |                             -   ^ expected `nat`, found integer
   |                             |
   |                             expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Zeroes_impl.rs:51:38
   |
51 |         let last_digit = if n % 2 == 0 { '0' } else { '1' };
   |                             -----    ^ expected `nat`, found integer
   |                             |
   |                             expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Zeroes_impl.rs:64:9
   |
58 | exec fn mod_exp_recursive(exponent: &[char], base: nat, modulus: nat) -> (result: nat)
   |                                                                                   --- expected `vstd::prelude::nat` because of return type
...
64 |         1
   |         ^ expected `nat`, found integer

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0308`.
